# Rust

./: README.md
Mastering Rust/Chapter 1/Conditionals/: Cargo.toml
Mastering Rust/Chapter 1/Conditionals/src/: if_assign.rs  if_else.rs  match_expressions.rs
Mastering Rust/Chapter 1/Functions/: Cargo.toml
Mastering Rust/Chapter 1/Functions/src/: closures.rs  function_mut.rs  functions.rs
Mastering Rust/Chapter 1/Greet/: Cargo.toml
Mastering Rust/Chapter 1/Greet/src/: greet.rs
Mastering Rust/Chapter 1/Hello-World/src/: main.rs
Mastering Rust/Chapter 1/Loops/: Cargo.toml
Mastering Rust/Chapter 1/Loops/src/: for_loops.rs  loop_labels.rs  loops.rs  while.rs
Mastering Rust/Chapter 1/Strings/: Cargo.toml
Mastering Rust/Chapter 1/Strings/src/: strings.rs
Mastering Rust/Chapter 1/Structs/: Cargo.toml
Mastering Rust/Chapter 1/Structs/src/: arrays.rs  enum_methods.rs  enums.rs  hashmaps.rs  slices.rs  struct_methods.rs  structs.rs  tuple_struct.rs  tuples.rs  unit_struct.rs  vec.rs
Mastering Rust/Chapter 1/Variables/: Cargo.toml
Mastering Rust/Chapter 1/Variables/src/: variables.rs
Mastering Rust/Chapter 1/Word-Counter/: Cargo.toml
Mastering Rust/Chapter 1/Word-Counter/src/: word_counter.rs
Mastering Rust/Chapter 2/Chapter_2/: Cargo.toml
Mastering Rust/Chapter 2/Chapter_2/src/: mod_within.rs
Mastering Rust/Chapter 2/Chapter_2/src/modules_demo/: foo.rs  main.rs
Mastering Rust/Chapter 2/Chapter_2/src/my_program/: foo.rs  main.rs
Mastering Rust/Chapter 2/Chapter_2/src/my_program/foo/: bar.rs
Mastering Rust/Chapter 2/myexponent/examples/: basic.rs
Mastering Rust/Chapter 2/myexponent/src/: lib.rs
Mastering Rust/Chapter 2/workspace_demo/: Cargo.toml
Mastering Rust/Chapter 2/workspace_demo/app/: Cargo.toml
Mastering Rust/Chapter 2/workspace_demo/my_crate/: Cargo.toml
Mastering Rust/Chapter 3/bench_example/src/: lib.rs
Mastering Rust/Chapter 3/criterion_demo/: Cargo.toml
Mastering Rust/Chapter 3/criterion_demo/benches/: fibonacci.rs
Mastering Rust/Chapter 3/criterion_demo/src/: lib.rs
Mastering Rust/Chapter 3/first_unit_test/: Cargo.toml
Mastering Rust/Chapter 3/first_unit_test/src/: first_unit_test.rs
Mastering Rust/Chapter 3/integration_test/tests/: common.rs  sum.rs
Mastering Rust/Chapter 3/logic_gates/src/: lib.rs
Mastering Rust/Chapter 3/logic_gates/tests/: half_adder.rs
Mastering Rust/Chapter 3/panic_test/: Cargo.toml
Mastering Rust/Chapter 3/panic_test/src/: lib.rs
Mastering Rust/Chapter 3/silly_loop/: Cargo.toml
(+4 files in other folders)
